# Agentic_rag

./: .env.example  .gitignore  MIGRATION_SUMMARY.md  README.md  TEACHING_ASSISTANT_SETUP.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  local_knowledge_agent.py  supervisor_agent.py
api/: routes.py
backend/: README.md  main.py  pyproject.toml  requirements.txt  test_gemini.py
backend/agents/: MIGRATION_NOTE.md  cloud_agent.py  local_knowledge_agent.py  supervisor_agent.py  web_search_agent.py
backend/api/: routes.py
backend/backend/data/vector_store/: index.faiss  index.pkl
backend/config/: settings.py
backend/data/vector_store/: index.pkl
backend/graph/: agent_graph.py  handoffs.py
backend/tools/: vector_search.py
backend/utils/: document_loader.py
config/: settings.py
frontend/: ARCHITECTURE.md  MIGRATION_GUIDE.md  README.md  index.html  package-lock.json  package.json
frontend-old/: README.md  package.json
frontend-old/public/: index.html
frontend-old/src/: App.jsx  index.css
frontend/src/: App.css  App.jsx.backup  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Chat.css  Chat.tsx  Documents.css  Documents.tsx  Sidebar.css  Sidebar.tsx
frontend/src/hooks/: index.ts  useChat.ts  useEventSource.ts
frontend/src/screens/: AttachmentsScreen.tsx  ChatScreen.tsx  ChatScreenWithSidebar.tsx
frontend/src/types/: chat.ts  index.ts
frontend/src/utils/: constants.ts  index.ts  textUtils.ts
models/: requests.py  responses.py
tools/: __init__.py  cloud_tools.py  vector_search.py  web_search.py
utils/: document_loader.py  logger.py
