[project]
name = "agentic-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Nurgisa Saginbek",email = "nurgisasaginbek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langchain (>=1.0.8,<2.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langgraph-supervisor (>=0.0.31,<0.0.32)",
    "langchain-google-genai (>=3.1.0,<4.0.0)",
    "faiss-cpu (>=1.13.0,<2.0.0)",
    "tavily-python (>=0.7.13,<0.8.0)",
    "pypdf (>=6.4.0,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sse-starlette (>=3.0.3,<4.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.0,<4.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.1,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "psycopg[binary,pool] (>=3.2.13,<4.0.0)",
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
